1.3.2.2 ()
==================

- Added -p option to control output precision for -r and -e modes.
- Turkish translations thanks to Angel Spy and Devrim Şahin.
- Updated Czech translations thanks to Kuvaly [LCT].
- Updated Basque translations thanks to Mikel Haranburu.
- Updated Hebrew translations.
- Occitan translations thanks to Cédric Valmary.
- Vietnamese translations thanks to Nguyen Quang Chien.


1.3.2.1 (20100212)
==================

- Complete Dutch translations thanks to Yentl.
- Complete Italian translations thanks to Lorenzo Baracchi.
- Completed French translations thanks to Michel Boisset.
- Partial Czech translations thanks to Kuvaly.
- Partial Frisian translations thanks to Wanda Nauta.
- Partial Norwegian Bokmal translations thanks to Sigurd Gartmann.
- Updated Brazilian Portugese translations thanks to Carlos Eduardo Moreira
  dos Santos.
- Updated Spanish translations thanks to Federico Vera and Paco Molinero.


1.3.2 (20090623)
================

- Don't allow equations to start with any of +*/%.
- Completed Spanish translations of program and man page thanks to navnelson.
- Partial Portuguese translations of the man page thanks to Tiago Silva.


1.3.1.4 (20090602)
==================

- Fix typo in Makefile causing translated man pages to not be installed.


1.3.1.3 (20090601)
==================

- Complete Danish translations (both program and man page) thanks to Jimmy
  Frydkær Jensen
- Partial Czech translations of ralcalc by DrakecZ.


1.3.1.2 (20090307)
==================

- Updated Brazilian Portugese translations thanks to Enrico Nicoletto.
- Further Polish translations thanks to pp/bs.
- Further Spanish translations thanks to Feder Sáiz.
- Complete Brazilian Portugese translation of the man page thanks to Enrico
  Nicoletto.
- Complete United Kingdom English translation of the man page thanks to Jen
  Ockwell.
- Complete Polish translation of the man page thanks to pp/bs.
- Partial French translation of the man page thanks to Johan Serre.