@@ -2,6 +2,7 @@
 ==================
 
 - Added -p option to control output precision for -r and -e modes.
+- Fix inconsistent output for SI prefixes smaller than m.
 - Turkish translations thanks to Angel Spy and Devrim Şahin.
 - Updated Czech translations thanks to Kuvaly [LCT].
 - Updated Basque translations thanks to Mikel Haranburu.
